Added recommended mappings for Check24 Furniture (#831)
* Edited Check24 page, added recommended mappings for Furniture

* Update check24-furniture-recommended-mappings.adoc

* Update check24-furniture-recommended-mappings.adoc

* Added recommended mappings for Check24 and Check24 Offer

* Adjusted recommended mappings

* Added translations for Check24 formats

* Some minor adjustments

--- a/docs/de-de/modules/maerkte/partials/check24offer-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24offer-recommended-mappings.adoc
@@ -3,21 +3,40 @@
 |===
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| ID
+| Artikelnummer
 | ja
 | * *SKU » SKU* +
 *_Tipp:_* Wähle die Auftragsherkunft *Check24.de*. Gib in das Feld *Konto* die Zahl `0` ein. +
 *_Tipp:_* Wähle als Ausweich-Datenfeld *Variante » Varianten-ID*.
 
+| Artikelname
+| ja
+| * *Artikeltext » Name 1*, Sprache *Deutsch*
+
+_oder_
+
+* *Artikeltext » Name 2*, Sprache *Deutsch*
+
+_oder_
+
+* *Artikeltext » Name 3*, Sprache *Deutsch*
+
+_oder_
+
+* Eigenschaft des Typs *Text*, Sprache *Deutsch*
+
+| EAN
+| ja
+| * *Barcode »* [Barcode des Typs *GTIN* wählen]
+
 | Bestand
-| nein
+| ja
 | * *Bestand » [1 oder mehrere Lager wählen]* +
 *_Tipp:_* Mit den Datenfeldern unter *Virtuelles Gesamtlager* wird die Summe der Bestände aller Vertriebslager exportiert.
 
-| Link
+| Verkaufspreis
 | ja
-| *URL-Pfad* des Artikels abhängig vom
-gewählten Mandanten
+| * *Verkaufspreis »* [Verkaufspreis für Check24 wählen]
 
 | Lieferzeit
 | ja
@@ -35,89 +54,121 @@ _oder_
 | nein
 | * *Variante » Standard-Versandkosten*
 
-| Name
+| Liefermodus
+| nein
+| * Eigenschaft des Typs *Auswahl*
+
+mögliche Werte:
+
+* `Spedition`
+* `Paket`
+* `Warensendung`
+* `Briefsendung`
+
+| Varianten-ID
 | ja
-| * *Artikeltext » Name 1*, Sprache *Deutsch*
+| Dieses Datenfeld wird automatisch zugeordnet.
 
-_oder_
+| Verfügbarkeit
+| nein
+| Verfügbarkeitsstatus des Artikels. +
 
-* *Artikeltext » Name 2*, Sprache *Deutsch*
+* Eigenschaft des Typs *Text* oder *Auswahl* +
 
-_oder_
+mögliche Werte: `auf Lager`, `nicht auf Lager`
 
-* *Artikeltext » Name 3*, Sprache *Deutsch*
+| UVP
+| nein
+| * *Verkaufspreis »* [Verkaufspreis vom Typ *UVP* wählen]
+
+| Kategoriepfad
+| nein
+| * *Standardkategorie » Pfad*
+
+| Link
+| nein
+| *URL-Pfad* des Artikels abhängig vom gewählten Mandanten
+
+| Artikelbeschreibung
+| nein
+| * *Artikeltext » Artikeltext*, Sprache *Deutsch*
 
 _oder_
 
 * Eigenschaft des Typs *Text*, Sprache *Deutsch*
 
-| Varianten-ID
+| Mindestpreis
 | nein
-| * *Variante » Varianten-ID*
+| Mit dem Mindestpreis bestimmst du die Preisuntergrenze, bis zu welcher du bereit bist, deinen Preis anzupassen. +
 
-| Zustellmodus
+* *Verkaufspreis »* [Verkaufspreis für Check24 wählen]
+
+| Marke
 | nein
-| * Eigenschaft des Typs *Auswahl*
+| * *Artikel » Herstellername*
 
-*_Mögliche Werte:_*
+| Bild-URL 1
+| nein
+| * *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL*
 
-* `spedition`
-* `paket`
-* `warensendung`
-| 2-Mann-Handling
+| 2-Mann-Service
 | nein
 | Bei Speditionslieferung: Lieferung bis Aufstellort?
 
 * Eigenschaft des Typs *Zeichenkette*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `ja` = kostenloser Service
 * `nein` = kein Service
 * Zusatzkosten als Dezimalzahl, zum Beispiel `39,99` = Preis für kostenpflichtigen Service
-| Aufbau-/Installationsservice
+
+| Installationsservice
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `ja`
 * `nein`
-| Mitnahme Altgerät
+
+| Altgerätmitnahme
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `ja`
 * `nein`
-| Mitnahme Verpackung
+
+| Verpackungsmitnahme
 | nein
 | * Eigenschaft des Typs *Auswahl*
 
-*_Mögliche Werte:_*
+mögliche Werte:
 
 * `ja`
 * `nein`
+
 | IDs der verfügbaren Services
 | nein
 | Ordne hier kein plentymarkets Datenfeld zu.
 
-| Logistikdienstleister
+| Versanddienstleister
 | nein
 | * Eigenschaft des Typs *Text* +
-  *_Beispiel:_* `DHL`
+  *_Beispiele:_* `DHL`, `DPD`
 
 | Zolltarifnummer
 | nein
 | * *Variante » Zolltarifnummer*
 
-| Versandkosten für Geschmacksretouren
+| Rückversandkosten
 | nein
 | * Eigenschaft des Typs *Kommazahl*, um den Preis einzugeben +
-  *_Beispiel:_* `39,99`
+  *_Beispiel:_* `3,99`
 
-| Altgeräteentsorgung ab Bordsteinkante
+| Abholung Altgerät an Bordsteinkante
 | nein
 | * Eigenschaft des Typs *Zeichenkette*, um den Preis einzugeben +
   *_Beispiel:_* `39,99`
