--- a/docs/de-de/modules/maerkte/pages/woocommerce.adoc
+++ b/docs/de-de/modules/maerkte/pages/woocommerce.adoc
@@ -12,18 +12,18 @@
 
 WooCommerce ist eine flexible Open-Source-E-Commerce-Lösung, die auf WordPress basiert. Egal, ob Du ein Unternehmen gründest, ein bestehendes stationäres Geschäft online schaltest oder Websites für Kunden entwirfst: Du kannst schnell loslegen und genau das Geschäft aufbauen, dass Du möchtest.
 
-== Wordpress installieren
+== WordPress installieren
 
-link:https://wordpress.org/[WordPress.org] dient als Content-Management-System und Startplattform für deinen Online-Handel mit WooCommerce. Einzelheiten zur Installation von WordPress findest Du auf der Seite link:https://wordpress.org/support/article/how-to-install-wordpress/[How to install WordPress].
+link:https://wordpress.org/[WordPress.org] dient als Content-Management-System und Startplattform für deinen Online-Handel mit WooCommerce. Wie du WordPress installierst erfährst du auf der Seite link:https://wordpress.org/support/article/how-to-install-wordpress/[How to install WordPress].
 
 == WooCommerce installieren
 
-Sobald Du Wordpress eingerichtet hast, installiere das WooCommerce-Plugin von der Wordpress-Seite link:https://docs.woocommerce.com/document/installing-uninstalling-woocommerce/[Installing and Uninstalling WooCommerce].
+Nachdem du WordPress installiert und eingerichtet hast, installierst du das WordPress-Plugin WooCommerce von der WordPress-Seite link:https://docs.woocommerce.com/document/installing-uninstalling-woocommerce/[Installing and Uninstalling WooCommerce].
 
 
 == WooCommerce API-Credentials generieren
 
-Generiere WooCommerce API-Credentials aus dem WooCommerce-Dashboard. Diese Anmeldeinformationen sind erforderlich, wenn Du plentymarkets mit WooCommerce verbindest.
+Generiere WooCommerce API-Credentials aus dem WooCommerce-Dashboard. Diese Anmeldeinformationen brauchst du, um plentymarkets mit WooCommerce zu verbinden.
 
 . Gehe zum *WooCommerce Dashboard*.
 . Öffne *WooCommerce » Einstellungen » Erweitert » REST-API*.
@@ -31,36 +31,43 @@ Generiere WooCommerce API-Credentials aus dem WooCommerce-Dashboard. Diese Anmel
 . Erstelle eine *Beschreibung*. +
 *_Wichtig:_* Stelle sicher, dass alle *Berechtigungen* auf *Lesen/Schreiben* gestellt sind.
 . Klicke auf *API-Schlüssel erstellen*.
-. Kopiere den API-Schlüssel sofort. Der API-Schlüssel wird beim Verlassen der Seite permanent ausgeblendet.
+. Kopiere den API-Schlüssel. +
+*_Wichtig:_* Kopiere den API-Schlüssel sofort. Der API-Schlüssel wird beim Verlassen der Seite permanent ausgeblendet.
 
 == Unterstützte Permalink-Struktur zuweisen
 
 . Gehe zum *WooCommerce Dashboard*.
 . Öffne *Einstellungen » Permalinks*.
-. Wähle eine der unterstützten  Permalink-Strukturen.
+. Wähle eine der unterstützten Permalink-Strukturen.
 . *Speichere* die Einstellungen. +
 *_Wichtig:_* Das Plugin unterstützt alle URL-Strukturen außer *Einfach*.
 
+== Plugin in plentymarkets installieren
 
-== Auftragsherkunft WooCommerce aktivieren
+Um WooCommerce in plentymarkets nutzen zu können, installiere zuerst das link:https://marketplace.plentymarkets.com/woocommerce_5102[limango-Plugin^] in deinem plentymarkets System. Dieses und andere Plugins findest du im link:https://marketplace.plentymarkets.com/[plentyMarketplace^].
 
-Die Plugin-Benutzeroberfläche wird sichtbar, sobald die Auftragsherkunft WooCommerce aktiv ist.
+:plugin: WooCommerce
+:main-client:
+include::partial$plugin-installation.adoc[]
 
-. Öffne das Menü *Einrichtung » Aufträge » Auftragsherkunft*.
-. Aktiviere *WooCommerce*.
-. *Speichere* die Einstellungen. +
-→ Die Plugin-Benutzeroberfläche ist unter *Einrichtung » Märkte » WooCommerce* sichtbar.
+== Auftragsherkunft aktivieren
+
+:referrer: WooCommerce
+:referrer-option: pass:quotes[Option *Galaxus*]
+
+include::partial$auftragsherkunft-aktivieren.adoc[]
+→ Das Menü *Einrichtung » Märkte » WooCommerce* wird wählbar.
 
 *_Wichtig:_*
 
-* Das Plugin kann keine manuell erstellte Auftragsherknft verwenden.
+* Das Plugin kann keine manuell erstellte Auftragsherkunft verwenden.
 * Das Plugin muss in dem Plugin-Set installiert sein, das mit dem Standard-Mandanten verknüpft ist.
 
-== Plugin konfigurieren
+== Schnittstelle in plentymarkets einrichten
 
-Die folgenden Unterkapitel führen Dich durch die Plugin-Optionen und ihre Konfiguration.
+Nimm die folgenden Einstellungen in plentymarkets vor, um die Schnittstelle zu WooCommerce einzurichten. Halte dazu die Zugangsdaten bereit, die du nach der Registrierung von WooCommerce erhalten hast.
 
-== Verbindung zur WooCommerce-API herstellen
+=== Verbindung zur WooCommerce-API herstellen
 
 Stelle eine Verbindung zur WooCommerce-API her. Dazu benötigst du die von WooCommerce bereitgestellten Zugangsdaten.
 
@@ -68,34 +75,32 @@ Stelle eine Verbindung zur WooCommerce-API her. Dazu benötigst du die von WooCo
 . Wähle, über welchen *Mandanten* deine WooCommerce-Verbindung laufen soll.
 . Trage den *Host-Namen* ein. +
 *_Beispiel:_* `http://yourWebShopName.domain/ +
-*_Wichtig:_* Der *Rückstrich [ / ]* am Ende der eingetragenen *URL* ist Pflicht.
+*_Wichtig:_* Der Rückstrich [/] am Ende der eingetragenen URL ist Pflicht.
 . Gib den *Verbraucherschlüssel* ein.
 . Gib das *Verbraucher-Geheimnis* ein.
 . Klicke auf *Verbindung testen*.
 . Speichere die Einstellungen. +
 → Dein Plugin ist mit der WooCommerce-API verbunden.
 
-=== Zusätzliche WooCommerce-Webshops verbinden
+=== _Optional:_ Weitere WooCommerce-Webshops verbinden
 
 Für jede neue Verbindung sind separate plentymarkets Mandanten und WooCommerce-Konten erforderlich.
 
 Um eine zusätzliche Verbindung einzurichten:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Tab: Verbindungsdetails*.
-. Klicke auf *[ + ] Hinzufügen*.
+. Klicke auf *[+] Hinzufügen*.
 . Folge denselben Schritten wie bei der vorherigen Verbindung. +
 *_Hinweis:_* Um zu einer anderen Plugin-Konfiguration zu wechseln, wähle den anderen WooCommerce-Webshop im Abschnitt *Webshops*.
 
 === Germanized-Bereitschaft einrichten
 
-"Germanized" erweitert WooCommerce um wichtige Funktionen für den deutschen Markt. Das Ziel dieses Plugins ist es, dein WooCommerce-Plugin an die speziellen Anforderungen des deutschen Marktes anzupassen.
+"Germanized" erweitert WooCommerce um wichtige Funktionen für den deutschen Markt. Das Plugins passt dein WooCommerce-Plugin an die speziellen Anforderungen des deutschen Marktes an.
 
-. Verwende die Installationsanleitung auf https://wordpress.org/plugins/woocommerce-germanized/ um *Germanized* zu installieren.
+. Verwende die Installationsanleitung auf link:https://wordpress.org/plugins/woocommerce-germanized/[WooCommerce], um *Germanized* zu installieren.
 . In plentymarkets, öffne das Menü *Einrichtung » Märkte » WooCommerce » Einstellungen » Abschnitt: Datenaustausch*.
 . Aktivierie die Option *Exportiere Daten zu 'Germanized-Plugin' spezifischen Eingabefeldern*.
-. Speichere die Einstellungen.
-
-=== Verarbeitung von Germanized-Eingabefeldern
+. Speichere die Einstellung.
 
 Hier siehst du eine Liste der Germanized-Eingabefelder, die zum Zeitpunkt des Artikelexports/der Aktualisierung verarbeitet werden:
 
@@ -105,14 +110,14 @@ Hier siehst du eine Liste der Germanized-Eingabefelder, die zum Zeitpunkt des Ar
 * *Artikel » Global »  Herstellungsland* zu WooCommerce *Produkt » Versand » Herstellungsland (Zoll)*.
 * Beim *Auftragsimport*: Die WooCommerce *DHL post number* importiert als *CRM » Kontante » Betroffener Kontat » Adressen Adresse » Typ: Postnummer*
 * Der *pro-Einheit-Basispreis* der Variante. Dieser Preis wird folgenderweise generiert: +
-*_Wichtig:_* _Der exportierte Basispreis berechnet sich aus dem der Variante zugeordneten WooCommerce-Verkaufspreis. Wenn auf deiner Variante auch ein Aktionspreis für WooCommerce definiert ist, wird auch dafür ein Basispreis generiert und exportiert._ +
+*_Wichtig:_* _Der exportierte Basispreis berechnet sich aus dem der Variante zugeordneten WooCommerce-Verkaufspreis. Wenn auf deiner Variante auch ein Aktionspreis für WooCommerce definiert ist, wird auch dafür ein Basispreis generiert und exportiert. +
   ** Für *Größe*: Meter, Zentimeter und Millimeter werden zum Zeitpunkt des Exports als Meterwerte ausgedrückt. Zoll werden als Zoll ausgedrückt.
   ** For *Gewicht*:Kilogramm, Gramm und Milligramm werden zum Zeitpunkt des Exports als Kilogramm-Werte ausgedrückt, Unzen werden als Unzen ausgedrückt.
   ** Für *Volumen*: Liter und Milliliter *_bis 250ml_* werden beim Export als Milliliter ausgedrückt. *_Ab 250ml_* wird der exportierte Wert als Liter ausgedrückt. Exportierte Werte, die Du in Litern definierst, halten sich an dieselbe Regel wie Liter und Milliliter.
 
 === Plugin konfigurieren
 
-*_Wichtig:_* Artikelbezogene *Import-/Exportprozesse* können nicht gleichzeitig aktiviert sein.
+*_Wichtig:_* Artikelbezogene Importprozesse und Exportprozesse können nicht gleichzeitig aktiviert sein.
 
 [[table-plugin-settings]]
 .Plugin-Einstellungen
@@ -120,12 +125,12 @@ Hier siehst du eine Liste der Germanized-Eingabefelder, die zum Zeitpunkt des Ar
 |===
 |Einstellung |Erläuterung
 
-|*Webshops*
+| *Webshops*
 | Auswahl wechselt zwischen verfügbaren wooCommerce-Verbindungen.
 
-2+|*Prozesse*
+2+^| *Prozesse*
 
-|*Auftragsimport*
+| *Auftragsimport*
 | Läuft alle 15 Minuten.
 
 Importiert nur Aufträge aus den Status, die Du unter *Auftragsimportstatus* freigeschaltet hast.
@@ -140,7 +145,7 @@ Folgende Daten werden importiert:
 * *Lieferadresse*
 * *Kontakt* +
 → als Auftragsempfänger verknüpft
-* *Artikel* und *Varianten Id's*
+* *Artikel* und *Varianten ID*
 * *Auftragsherkunft*
 * *Artikel Beschreibung*
 * *Bestellte Mengen*
@@ -151,51 +156,73 @@ Folgende Daten werden importiert:
 * *Rabatte*
 * *Kunden Notizen*
 
-Das korrekte plentymarkets Versandprofil wird beim Auftragsimport nur dann zugewiesen, wenn die Versandprofilnamen zwischen WooCommerce und plentymarkets übereinstimmen.
+Das korrekte plentymarkets Versandprofil wird beim Auftragsimport nur zugewiesen, wenn die Versandprofilnamen zwischen WooCommerce und plentymarkets übereinstimmen.
 
-Das Plugin erkennt nur Rabattartikel, die auf WooCommerce-Aufträgen enthalten sind, Rabatt-Campagnen werden nicht unterstützt. Der rabattierte Wert aus dem WooCommerce-Auftrag wird als separates Line-Item importiert.
+Das Plugin erkennt nur Rabattartikel, die auf WooCommerce-Aufträgen enthalten sind. Rabatt-Campagnen werden nicht unterstützt. Der rabattierte Wert aus dem WooCommerce-Auftrag wird als separates Line-Item importiert.
 
-Der Auftragsimport führt auch eine *Paymantstatus-Aktualisierung* für schon importierte Aufträge durch.
+Der Auftragsimport führt auch eine *Paymentstatus-Aktualisierung* für schon importierte Aufträge durch.
 
 |*Warenbestand-Export*
-| Wird dynamisch ausgeführt, basierend auf der Anzahl der zu aktualisierenden Varianten
+| Wird dynamisch basierend auf der Anzahl der zu aktualisierenden Varianten ausgeführt:
 
 * Alle 15 Minuten für bis zu *500* Varianten.
 * Stündlich für *500 zu 1500* Varianten.
 * Einmal am Tag für über *1500* Varianten.
 
-*_Wichtig:_* SKU Matching muss existieren, damit dieser Prozess korrekt laufen kann.
+*_Wichtig:_* SKU-Matching muss existieren, damit dieser Prozess korrekt laufen kann.
 
-|*Preisexport*
-| Läuft alle *15 Minuten.*
+| *Preisexport*
+| Läuft alle 15 Minuten.
 
-*_Wichtig:_* SKU Matching muss existieren, damit dieser Prozess korrekt laufen kann. Das Plugin verwendet die Benutzerauswahl von WooCommerce *Einstellungen » Mehrwertsteuer » Preise mit Steuern eingegeben* um zu entscheiden, ob der exportierte Preis *Brutto* oder *NETTO* sein wird.
+*_Wichtig:_* SKU-Matching muss existieren, damit dieser Prozess korrekt laufen kann. Das Plugin verwendet die Benutzerauswahl von WooCommerce *Einstellungen » Mehrwertsteuer » Preise mit Steuern eingegeben* um zu entscheiden, ob der exportierte Preis *Brutto* oder *NETTO* ist.
 
-|*Kundenimport*
+| *Kundenimport*
 | Läuft einmal am Tag.
 
-Importiert den WooCommerce-Kundenstamm nach plentymarkets.
+Importiert den WooCommerce-Kundenstamm in plentymarkets.
 
-*_Hinweis:_* Während des Auftragsimports speichert das Plugin auftragsrelevante Kontaktdaten. Weitere Informationen hierzu findest Du unter <<dsgvo, Überlegungen zur DSGVO>> am Ende der Pluginbeschreibung.
+*_Hinweis:_* Während des Auftragsimports speichert das Plugin auftragsrelevante Kontaktdaten. Um den DSGVO-Spezifikationen gerecht zu werden, wurden folgende Richtlinien für den Auftragsimport implementiert:
+
+[cols="2a,3a"]
+!===
+! *Szenario*
+! *Bedingungen*
+
+! Kontakt wird als Gast importiert
+!
+* Käufer:in hat keine plentymarkets Kontaktdetails.
+* Die Echtheit des Kontakts wird von keiner Partei garantiert, selbst wenn die Kontaktdaten bei jedem Auftragsimport identisch sind. +
+*_Hinweis:_* Bei Bedarf kannst Du Kontakte des Typs *Gast* manuell in reguläre Kontakte umwandeln.
+
+! Käufer:in wird als plentymarkets Kontakt importiert
+!
+* Das Plugin erstellt einen plentymarkets Kontakt, wenn die Authentizität des WooCommerce-Kontakts durch eine eindeutige externe Kontakt-ID garantiert wird.
+
+! Existierender plentymarkets Kontakt wird mit dem importierten Auftrag verknüpft
+!
+* Das Plugin prüft, ob in der Vergangenheit ein Kontakt von WooCommerce mit dieser externen Kontakt-ID importiert wurde.
+* Wenn ein Kontakt existiert, wird der Import der neuen Bestellung an diesen Kontakt angehängt.
+!===
 
 |*Kategorieexport*
-| Läuft einmal am Tag. Exportiert alle Kategorien die Du für die Auftragsherkunft WooCommerce freigeschaltet hast. +
-*_Hinweis:_* Verwenden diese Funktion nicht, um Artikel-verknüpfte Kategorien zu exportieren. Verwende zu diesem Zweck stattdessen den Artikelexport. Diese Funktion ist für einen einfachen Export deines gesamten plentymarkets Kategoriebaums gedacht.
+| Läuft einmal am Tag. Exportiert alle Kategorien, die Du für die Auftragsherkunft WooCommerce freigeschaltet hast.
 
-Bitte beachte, dass das Plugin bestimmte WooCommerce-Kategorien löschen kann, wenn:
+*_Hinweis:_* Verwenden diese Funktion nicht, um mit Artikeln verknüpfte Kategorien zu exportieren. Verwende zu diesem Zweck stattdessen den Artikelexport. Diese Funktion ist für einen einfachen Export deines gesamten plentymarkets Kategoriebaums gedacht.
 
-* Die verknüpte plentymarkets-Kategorie gelöscht wird.
-* Oder die Mandantenzuweisung der verknüpften plentymarkets-Kategorie entfernt wurde.
+Beachte, dass das Plugin bestimmte WooCommerce-Kategorien löschen kann, wenn:
+
+* die verknüpte plentymarkets Kategorie gelöscht wird.
+* die Mandantenzuweisung der verknüpften plentymarkets Kategorie entfernt wurde.
 
 |*Kategorieimport*
-|Läuft ein Mal am Tag. Importiert alle Kategorien aus WooCommerce.
+|Läuft einmal am Tag. Importiert alle Kategorien aus WooCommerce.
 
-*_Hinweis:_* Artikel verknüpfte Kategorien können auch beim *Artikelimport*, importiert werden.
+*_Hinweis:_* Mit Artikeln verknüpfte Kategorien können auch beim *Artikelimport* importiert werden.
 
 |*Artikelexport*
-| * Läuft ein Mal am Tag für den ersten Import.
+| * Läuft einmal am Tag für den ersten Import.
 * Stündlich für nachfolgende Artikelaktualisierungen. +
-*_Wichtig:_* Das Plugin verarbeitet nur WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*.
+*_Wichtig:_* Das Plugin verarbeitet nur die WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*.
 
 Folgende Daten werden exportiert:
 
@@ -221,9 +248,9 @@ Folgende Daten werden exportiert:
 * *WB NETTO* als *Lagerbestandsmenge*
 
 |*Artikelimport*
-| Läuft ein Mal am Tag
+| Läuft einmal am Tag
 
-Das Plugin verarbeitet nur WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*.
+Das Plugin verarbeitet nur die WooCommerce Produkttypen *Einfaches Produkt* und *Variables Produkt*.
 
 Folgende Daten werden importiert:
 
@@ -241,70 +268,71 @@ Folgende Daten werden importiert:
 * *Lagerbestandsmenge* als *Physischer Warenbestand*
 * *SKU* as *SKU*
 
-2+| *Datenaustausch*
+2+^| *Datenaustausch*
+
 | *Hersteller als Attribut exportieren*
-| *Aktiviere / Deaktiviere* den Export des verlinkten Herstellers als *Attribut * Sichtbar auf der Produktseite*.
+| Aktiviere / Deaktiviere den Export des verlinkten Herstellers als *Attribut * Sichtbar auf der Produktseite*.
 
-|*Exportiere Artikel zugewiesene Merkmale*
-| *Aktiviere / Deaktiviere* den Export der verknüpften Merkmale als *Attribute * Sichtbar auf der Produktseite*.
+| *Exportiere Artikel zugewiesene Merkmale*
+| Aktiviere / Deaktiviere den Export der verknüpften Merkmale als *Attribute * Sichtbar auf der Produktseite*.
 
-|*Neuen Artikel als 'Entwurf' exportieren*
-| *Aktiviere / Deaktiviere* den Export neuer Artikel als *Entwürfe*.
+| *Neuen Artikel als 'Entwurf' exportieren*
+| Aktiviere / Deaktiviere den Export neuer Artikel als *Entwürfe*.
 
-|*Automatische SKU-Erstellung basiert auf:*
-|Generiert SKUs für exportierte Varianten basierend auf Benutzerauswahl.
+| *Automatische SKU-Erstellung basiert auf:*
+| Generiert SKUs für exportierte Varianten basierend auf Benutzerauswahl.
 
 Auswahlmöglichkeiten sind:
 
 * *Leer* → erstellt keine SKU.
 * *Variantennr.*
 * *Varianten Id*
--*Barcode*
+* *Barcode*
 
 *_Empfehlung:_* Verwende dasselbe Eingabefeld zur SKU-Generierung für alle WooCommerce-Webshops, die über das Plugin verwaltet werden.
 
-|*Artikel-Sprache für Export / Import*
-| Wähle eine Sprache für den Artikel Import / Export aus.
+| *Artikel-Sprache für Export / Import*
+| Wähle eine Sprache für den Import und Export von Artikeln.
 
-*_Wichtig:_* Bitte beachte, dass alle übersetzbaren Eingabefelder eingerichtet sein müssen, damit der Export korrekt laufen kann.
+*_Wichtig:_* Alle übersetzbaren Eingabefelder müssen eingerichtet sein, damit der Export korrekt läuft.
 
-|*WooCommerce-Artikel deaktivieren, wenn der verknüpfte plentymarkets-Artikel deaktiviert ist*
-| *Aktiviere / Deaktiviere* das Löschen von WooCommerce-Artikeln, die auf plentymarkets deaktiviert wurden.
+| *WooCommerce-Artikel deaktivieren, wenn der verknüpfte plentymarkets-Artikel deaktiviert ist*
+| Aktiviere / Deaktiviere das Löschen von WooCommerce-Artikeln, die auf plentymarkets deaktiviert wurden.
 
-|*Exportiere Eigenschaften als WooCommerce Attribute*
-| Entscheide welche verknüpften Eigenschaften beim Artikelexport beachtet werden sollen.
+| *Exportiere Eigenschaften als WooCommerce Attribute*
+| Entscheide, welche verknüpften Eigenschaften beim Artikelexport beachtet werden sollen.
 
 Verfügbare Optionen sind:
 
 * *Keine*
 * *Alle*
 * *Nur ausgewählte Eigenschaften* +
-→ Benutze den Reiter *Eigenschaften Export* um auszuwählen welche Eigenschaften für den Export freigeschaltet werden.
+→ Wähle im Tab *Eigenschaften Export*, welche Eigenschaften für den Export freigeschaltet werden.
 
-|*Tags für Export / Import*
+| *Tags für Export / Import*
 | Tags aus folgender Quelle exportieren:
 
 * Meta Keywords
 * Varianten zugewiesene Tags
 
 |*Bestandspuffer*
-| Beim Senden von Beständen an WooCommerce subtrahiert das Plugin immer die Menge, die hier eingetragen wird.
+| Beim Senden von Beständen an WooCommerce subtrahiert das Plugin immer die Menge, die hier eingegeben wird.
 
 2+^| *Importiere und exportiere Warenbestände aus:*
 
-|*Alle verfügbaren Lager (Vertrieb)*
-| Exportiert Mengen aus allen Lagern vom Typ Vertrieb, die mit dem Artikel verknüpft sind.
+| *Alle verfügbaren Lager (Vertrieb)*
+| Exportiert Bestandsmengen aus allen Lagern des Typs *Vertrieb*, die mit dem Artikel verknüpft sind.
 
-|*Lager meine Wahl*
-| Wähle die Lager (Vertrieb) aus, aus denen die Mengen exportiert werden.
+| *Lager meine Wahl*
+| Wähle die Lager des Typs *Vertrieb*, aus denen Bestandsmengen exportiert werden.
 
-2+^|*Auftragsimport Optionen*
+2+^| *Auftragsimport Optionen*
 
-|*Auftragsimport Startdatum*
-|Das Auftragsimportdatum wird bei jedem Auftragsimportlauf aktualisiert, um das Datum des letzten imports wiederzugeben. Um ältere Aufträge zu importieren, trage, als Startdatum, des ältesten verpassten Auftrags ein.
+| *Auftragsimport Startdatum*
+| Das Auftragsimportdatum wird bei jedem Auftragsimportlauf aktualisiert, um das Datum des letzten Imports wiederzugeben. Um ältere Aufträge zu importieren, gib das Startdatum des ältesten verpassten Auftrags ein.
 
-|*Auftragsimportstatus*
-| Wähle, welche Aufträge nach plentymarkets importiert werden sollen.
+| *Auftragsimportstatus*
+| Wähle, welche Aufträge in plentymarkets importiert werden sollen.
 
 Auswahlmöglichkeiten sind:
 
@@ -313,19 +341,19 @@ Auswahlmöglichkeiten sind:
 * *In Wartestellung*
 * *Fertiggestellt*
 
-|*Identifiziere die Hausnummer aus dem WooCommerce-Eingabefeld 'Adresszeile 1'*
-|*Aktiviere / Deaktiviere* die Extraktion der *Hausnummer* aus WooCommerce *Adresszeile 1*. Dieser Wert wird auf das plentymarkets Eingabefeld *ADDRESSE 2* importiert.
+| *Identifiziere die Hausnummer aus dem WooCommerce-Eingabefeld 'Adresszeile 1'*
+| Aktiviere / Deaktiviere die Extraktion der *Hausnummer* aus WooCommerce *Adresszeile 1*. Dieser Wert wird in das plentymarkets Eingabefeld *ADDRESSE 2* importiert.
 
 2+^|*Auftragsimportstatus*
 
-|*Auftrag Status für eingehende Storno Anfragen:*
-|Wähle einen Auftragsstatus für eingehende Storno-Anfragen.
+| *Auftrag Status für eingehende Storno Anfragen:*
+| Wähle einen Auftragsstatus für eingehende Stornoanfragen.
 
-|*Ab folgenden Status automatisch ablehnen:*
-|Eingehende Storno-Anfragen werden, ab diesem Status und höher, automatisch abgelehnt.
+| *Ab folgenden Status automatisch ablehnen:*
+| Für Aufträge ab diesem Status werden eingehende Stornoanfragen automatisch abgelehnt.
 
 |*Kontakt Import Optionen*
-| Wähle aus welche Kundenklasse deinen Kunden beim Import zugewiesen wird.
+| Wähle, welche Kundenklasse deinen Kund:innen beim Import zugewiesen wird.
 
 |===
 
@@ -333,27 +361,27 @@ Auswahlmöglichkeiten sind:
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Tab: Eigenschaften Export*.
 . Wähle den Webshop, für den du diese Funktion konfigurieren möchtest.
-. Klick auf *[ + ] Hinzufügen*.
+. Klick auf *[+] Hinzufügen*.
 . Wähle eine *Eigenschaft*.
 . Speichere die Einstellungen. +
 → Die freigeschaltete Eigenschaft wird in der Liste angezeigt.
 
-*_Wichtig:_* WooCommerce akzeptiert für Eigenschaften keine Datensätze, die länger 28 Zeichen sind.
+*_Wichtig:_* WooCommerce akzeptiert für Eigenschaften keine Datensätze, die länger als 28 Zeichen sind.
 
 === plentymarkets MwSt.-Sätze mit WooCommerce Steuerklassen verknüpfen
 
-Ermöglicht dem Plugin, die Mehrwertsteuersätze aus plentymarkets mit den Steuerklassen aus WooCommerce beim Artikelexport zu korrelieren.
+Verknüpfe die Mehrwertsteuersätze aus plentymarkets mit den Steuerklassen aus WooCommerce, damit die Steuersätze beim Artikelexport korrekt zugeordnet werden.
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » MwSt.-Satz Zuordnungen*.
-. Klick auf *[ + ] Hinzufügen*. +
+. Klick auf *[+] Hinzufügen*. +
 → Das Fenster *Verknüpfe plentymarkets MwSt.-Sätze mit WooCommerce MwSt.-Klassen* wird geöffnet.
 . Wähle einen *plentymarkets MwSt.-Satz*.
 . Wähle eine *WooCommerce Steuerklasse*.
 . Speichere die Einstellungen. +
 → Die erstellte Verknüpfung wird in der Liste angezeigt. +
-*_Hinweis:_* Der verknüpfte MwSt.-Satz unter *Artikel » Variante » Einstellungen » Kosten » MwSt.* wird auf WooCommerce in *Produkt » Allgemein » Steuerklasse* geschrieben.
+*_Hinweis:_* Der verknüpfte MwSt.-Satz im Menü *Artikel » Variante » Einstellungen » Kosten » MwSt.* wird auf WooCommerce im Menü *Produkt » Allgemein » Steuerklasse* gespeichert.
 
-=== Plugin-Hilfe nutzen
+== Plugin-Hilfe nutzen
 
 Im plentymarkets Backend findest du das Menü *Einrichtung » Märkte » WooCommerce » Hilfe*. Mit dieser Plugin-Hilfe kannst Du:
 
@@ -363,7 +391,7 @@ Im plentymarkets Backend findest du das Menü *Einrichtung » Märkte » WooComm
 * alle 10 Minuten einen Artikel manuell exportieren.
 * alle 5 Minuten den Warenbestand einer Variante oder eines ganzen Artikels exportieren.
 
-===== Plugin-Bereitschaft prüfen
+=== Plugin-Bereitschaft prüfen
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Plugin Bereitschaft*.
 . Klick auf *Überprüfen*. +
@@ -373,12 +401,12 @@ Im plentymarkets Backend findest du das Menü *Einrichtung » Märkte » WooComm
 
 *_Was wird geprüft?_*
 
-* Ist die Herkunft "WooCommerce" muss unter *System » Aufträge » Auftragsherkunft* aktiviert?
-* Gibt es mehr als eine "WooCommerce" Herkunft unter *Einrichtung » Aufträge » Auftragsherkunft*? Achte darauf, dass die ID mit der höchsten Nummer aktiviert ist.
+* Ist die Herkunft *WooCommerce* im Menü *System » Aufträge » Auftragsherkunft* aktiviert?
+* Gibt es mehr als eine Herkunft *WooCommerce* im Menü *Einrichtung » Aufträge » Auftragsherkunft*? Achte darauf, dass die ID mit der höchsten Nummer aktiviert ist.
 * Konnte eine Verbindung zu WooCommerce.com hergestellt werden?
 * Wird die SDK-Datei korrekt bereitgestellt?
 
-==== Exportbedingungen einer Variante prüfen
+=== Exportbedingungen einer Variante prüfen
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Exportbedingungen*.
 . Wähle den Webshop, für den Du diese Variante prüfen möchtest.
@@ -405,11 +433,11 @@ Im plentymarkets Backend findest du das Menü *Einrichtung » Märkte » WooComm
 * Varianten  Attribut-Wert existiert für die ausgewählte Artikel-Exportsprache.
 * Die ausgewählte Variante hat keine aktuellen Änderungen und ist vom nächsten Artikelexport / -update ausgeschlossen.
 
-==== Stardatum für Warenbestandsexport und Preisexport anpassen
+=== Stardatum für Warenbestandsexport und Preisexport anpassen
 
 Wenn der Warenbestandsabgleich oder Preisabgleich nicht alle erwarteten Artikel exportiert, kannst Du das Startdatum des Exports für diesen Prozess auf ein beliebiges Datum zurücksetzen. Das Plugin berücksichtigt dein definiertes Startdatum beim nächsten Lauf anstelle des notierten *last-run* Zeitstempels.
 
-==== Einen Artikel manuell exportieren
+=== Einen Artikel manuell exportieren
 
 Zu Testzwecken kannst Du mit dem Plugin alle 10 Minuten einen Artikel manuell exportieren.
 
@@ -421,13 +449,13 @@ Zu Testzwecken kannst Du mit dem Plugin alle 10 Minuten einen Artikel manuell ex
 . Klick auf *Ausführen*. +
 → Wenn alle Exportbedingungen erfüllt sind, werden der Artikel und seine Varianten exportiert.
 
-*_Hinweis:_* Du hast einen oder mehrere Artikel auf WooCommerce gelöscht und möchtest die Daten nur noch einmal exportieren? Der nächste Export bereinigt nur die Plugin-Datenbank. Deshalb wird erst im Export danach dein Artikel wieder zu WooCommerce exportieren.
+*_Hinweis:_* Du hast einen oder mehrere Artikel auf WooCommerce gelöscht und möchtest die Daten neu exportieren? Der nächste Export bereinigt nur die Plugin-Datenbank. Deshalb wird dein Artikel erst im Export danach wieder zu WooCommerce exportiert.
 
-=== Tab: Warenbestand Export
+== Tab: Warenbestand Export
 
 Zu Testzwecken kannst Du mit dem Plugin alle 5 Minuten Warenbestände für einen Artikel manuell exportieren. Für eine Variante kannst Du einen Export alle 3 Minuten anstossen.
 
-==== Warenbestand und Verkaufspreis für eine Variante manuell exportieren
+=== Warenbestand und Verkaufspreis für eine Variante manuell exportieren
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Warenbestand Export*.
 . Wähle den Webshop, auf dem Du Warenbestände aktualisieren möchtest.
@@ -435,7 +463,7 @@ Zu Testzwecken kannst Du mit dem Plugin alle 5 Minuten Warenbestände für einen
 . Klicke auf *Ausführen*. +
 → Wenn alle Exportbedingungen erfüllt sind, wird der Warenbestand exportiert.
 
-==== Warenbestand und Verkaufspreis für einen Artikel, manuell exportieren
+=== Warenbestand und Verkaufspreis für einen Artikel manuell exportieren
 
 . Öffne das Menü *Einrichtung » Märkte » WooCommerce » Hilfe » Warenbestand Export*
 . Wähle den Webshop, auf dem du Warenbestände aktualisieren möchtest.
@@ -443,11 +471,11 @@ Zu Testzwecken kannst Du mit dem Plugin alle 5 Minuten Warenbestände für einen
 . Klicke auf *Ausführen*. +
 → Wenn alle Exportbedingungen erfüllt sind, wird der Warenbestand exportiert.
 
-=== Die Plugin-Ereignisaktionen
+== Die Plugin-Ereignisaktionen
 
 Mit den Ereignisaktionen des Plugins kannst Du mit WooCommerce Informationen über deine Aufträge austauschen. Weitere Informationen zum Thema plentymarkets Ereignisaktionen findest Du xref:automatisierung:ereignisaktionen.adoc[hier].
 
-==== Eine Beispiel-Ereignisaktion einrichten
+=== Beispiel: Ereignisaktion "Warenausgang Gebucht" einrichten
 
 . Öffne das Menü *Einrichtung » Aufträge » Ereignisaktionen*.
 . Klicke auf *[ + ]Hinzufügen*. +
@@ -460,12 +488,9 @@ Mit den Ereignisaktionen des Plugins kannst Du mit WooCommerce Informationen üb
 . Wähle eine *Aktion mit Typ: Plugin » Versandbestätigung an WooCommerce senden*.
 . *Speichere* die Einstellungen.
 
-
-*Tabelle 2* _Die WooCommerce Ereignisaktionen_.
-
 [[table-woocommerce-event-procedures]]
-.WooCommerce-Ereignisaktionen
-[cols="1,3a"]
+.Ereignisaktionen für WooCommerce
+[cols="2,3a"]
 |===
 |Einstellung |Erläuterung
 
@@ -489,30 +514,5 @@ Mit den Ereignisaktionen des Plugins kannst Du mit WooCommerce Informationen üb
 
 | *Sende Auftrag "Fehlgeschlagen" an WooCommerce*
 |Verschiebt den WooCommerce-Auftrag in den Status *Fehlgeschlagen*.
-
-|===
-
-[#dsgvo]
-=== Überlegungen zur DSGVO
-
-Aufgrund der DSGVO-Spezifikationen wurden folgende Richtlinien in Bezug auf Kunden beim Auftragsimport implementiert:
-
-[[table-dsgvo-order-import]]
-.DSGVO beim Auftragsimport
-[cols="1,3a"]
-|===
-|Szenario |Erläuterung
-
-| *Kontakt wird als Gast importiert*
-|
-* Käufer:in hat keine plentymarkets Kontaktdetails.
-* Die Echtheit des Kontakts wird von keiner Partei garantiert, selbst wenn die Kontaktdaten bei jedem Auftragsimport identisch sind. +
-*_Hinweis:_* Bei Bedarf kannst Du Kontakte manuell vom Typ *Gast* in reguläre Kontakte umwandeln.
-
-| *Käufer wird als plentymarkets Kontakt importiert*
-| Das Plugin erstellt einen plentymarkets Kontakt, wenn die Authentizität des WooCommerce-Kontakts durch eine eindeutige externe Kontakt-ID garantiert wird.
-
-| *Ein existierender plentymarkets Kontakt wird mit dem importierten Auftrag verknüpft*
-| Das Plugin prüft, ob in der Vergangenheit ein Kontakt von WooCommerce mit dieser externen Kontakt-ID importiert wurde. Wenn ein Kontakt existiert, wird der Import der neuen Bestellung an diesen Kontakt angehängt.
 
 |===
